# BDDFormulaSimplifier

./: .README.md.swp  .gitignore  .gitmodules  CMakeLists.txt  README.md  q3b.patch
src/: FAS_SMTVisitor.cpp  FAS_SMTVisitor.h  FBSLogger.cpp  FBSLogger.h  FBS_SMTVisitor.cpp  FBS_SMTVisitor.h  FormulaSimplifier.cpp  FormulaSimplifier.h  Settings.h  SimplifierBasic.cpp  SimplifierBasic.h  SimplifierThread.cpp  SimplifierThread.h  TimeoutManager.cpp  TimeoutManager.h  analyze.py  compare.sh  getbench.py  main.cpp  out.csv  plotgen.py  results_16s_complete.csv  results_60s_complete.csv  test.smt2
